test/corpus/06-attributes.txt
================================================================================
simple match
================================================================================

sp {simple
    (state <s> ^foo)
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))))))))

================================================================================
simple negative match
================================================================================

sp {simple-negative
    (state <s> -^foo)
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))))))))

================================================================================
variable match
================================================================================

sp {variable
    (state <s> ^<foo>)
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (variable)))))))))))

================================================================================
simple concatenated match
================================================================================

sp {simple-cat
    (state <s> ^foo.bar)
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string))))
              (test
                (simpleTest
                  (singleTest
                    (string)))))))))))

================================================================================
concatenated match with bad parent should fail; only string/quoted/variable can have a child; TODO: SHOULD FAIL
================================================================================

sp {cat
    (state <s> ^foo.1.bar)
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (floatConstant)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (floatConstant)))))
            (valueTest
              (test
                (simpleTest
                  (singleTest
                    (string)))))))))))

================================================================================
simple conjunction match
================================================================================

sp {conjunction
    (state <s> ^{foo bar})
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (conjunctiveTest
                  (simpleTest
                    (singleTest
                      (string)))
                  (simpleTest
                    (singleTest
                      (string))))))))))))

================================================================================
complicated conjunction match
================================================================================

sp {conjunction-mess
    (state <s> ^{foo << bar baz >> <=> 21})
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (conjunctiveTest
                  (simpleTest
                    (singleTest
                      (string)))
                  (simpleTest
                    (disjunctionTest
                      (string)
                      (string)))
                  (simpleTest
                    (relationalTest
                      (relation)
                      (singleTest
                        (string)))))))))))))

================================================================================
complicated conjunction concatenation match
================================================================================

sp {conjunction-mess-cat
    (state <s> ^{foo << bar baz >> <=> 21}.{fu bear}.| haleluja! |)
-->
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable)))))
          (attrValueTests
            (attrTest
              (test
                (conjunctiveTest
                  (simpleTest
                    (singleTest
                      (string)))
                  (simpleTest
                    (disjunctionTest
                      (string)
                      (string)))
                  (simpleTest
                    (relationalTest
                      (relation)
                      (singleTest
                        (string))))))
              (test
                (conjunctiveTest
                  (simpleTest
                    (singleTest
                      (string)))
                  (simpleTest
                    (singleTest
                      (string)))))
              (test
                (simpleTest
                  (singleTest
                    (quoted)))))))))))

================================================================================
simple make
================================================================================

sp {simple
    (state <s>)
--> (<s> ^foo <bar>)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (variable))))))

================================================================================
concatenated make
================================================================================

sp {cat
    (state <s>)
--> (<s> ^foo.bar <bar>)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (floatConstant))
        (valueMake
          (string))
        (valueMake
          (variable))))))

================================================================================
concatenated make with bad parent; sourceforge issue 135; Only string/quoted/variable can have a child; currently failing to match the behavior caused by that bug.SKIP
================================================================================

sp {cat
    (state <s>)
--> (<s> ^foo.1.bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (floatConstant))
        (valueMake
          (floatConstant))
        (valueMake
          (string))))))

================================================================================
concatenated variable make
================================================================================

sp {variable
    (state <s>)
--> (<s> ^foo.<bar> <baz>)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (floatConstant))
        (valueMake
          (variable))
        (valueMake
          (variable))))))

================================================================================
concatenated varied make
================================================================================

sp {varied
    (state <s>)
--> (<s> ^<foo>.| spa ce |.more.4 <bar>)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (variable)
        (valueMake
          (floatConstant))
        (valueMake
          (quoted))
        (valueMake
          (floatConstant))
        (valueMake
          (string))
        (valueMake
          (floatConstant))
        (valueMake
          (variable))))))
