test/corpus/10-quoted.txt
================================================================================
empty string
================================================================================

sp {empty-string
    (state <s> ^foo ||)
-->    (<s> ^foo bar)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (quoted))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
lots of garbage
================================================================================

sp {garbage
    (state <s> ^foo |foo bar    \"'!@#$%^&*}
{()[]_+=-.,:;|)
-->    (<s> ^foo bar)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (quoted))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
unicode
================================================================================

sp {utf8
    (state <s> ^foo |ぐ|)
-->    (<s> ^foo bar)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (quoted))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
bar escaping
================================================================================

sp {escaped
    (state <s> ^foo |a bar (\|)|)
-->    (<s> ^foo bar)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (quoted))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
slash not an escape
================================================================================

sp {not-escaped
    (state <s> ^foo |a slash \s was here|)
--> (<s> ^foo bar)
}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (quoted))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
should error with no closing bar
================================================================================

sp {unfinished
    (state <s> ^foo |infinite comment...)
-->    (<s> ^foo bar)
}
--------------------------------------------------------------------------------

(source_file
  (ERROR
    (prod_name)
    (condType)
    (idTest
      (variable))
    (attrValueTests
      (string))
    (UNEXPECTED '\0')))

================================================================================
quoted # character
================================================================================

sp {literals_test
   (state <s> ^superstate nil) # }}}}
-->
   (<s> ^literal |##}}}}}{{##|)}
--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (string))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (quoted))))))
