test/corpus/13-predicate.txt
================================================================================
greater than number
================================================================================

sp {greater-than
    (state <s> ^foo > 1)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (relationalTest
            (relation)
            (string)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
same-type as variable
================================================================================

sp {same-type
    (state <s> ^foo <=> <x>)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (relationalTest
            (relation)
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
not equal to quoted string
================================================================================

sp {inequality
    (state <s> ^foo <> |foo bar| )
-->    (<s> ^bar ||)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (relationalTest
            (relation)
            (quoted)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (quoted))))))

================================================================================
multiple vals
================================================================================

sp {multiple-vals
    (state <s> ^foo 1 b |stuff|)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (string))
        (valueTest
          (string))
        (valueTest
          (quoted))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
multiple tests
================================================================================

sp {multiple-tests
    (state <s> ^foo 1 > 0 <=> 45 <> NaN)
-->    (<s> ^foo bar)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (string))
        (valueTest
          (relationalTest
            (relation)
            (string)))
        (valueTest
          (relationalTest
            (relation)
            (string)))
        (valueTest
          (relationalTest
            (relation)
            (string)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (string))))))

================================================================================
conjunction with unary relations
================================================================================

sp {conjunct-rel
    (state <s> ^foo { <= <a> >= <b> })
-->    (<s> ^bar ||)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (conjunctiveTest
            (relationalTest
              (relation)
              (variable))
            (relationalTest
              (relation)
              (variable))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (quoted))))))

================================================================================
conjunction with binary relation
================================================================================

sp {conjunct-binary-rel
    (state <s> ^foo { <a> > <b> })
-->    (<s> ^bar ||)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (conjunctiveTest
            (variable)
            (relationalTest
              (relation)
              (variable))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (quoted))))))

================================================================================
conjunction with mixed relations
================================================================================

sp {conjunct-mixed-rel
    (state <s> ^foo { <=> <x> > <y> << 1 2 3 4 >> <z> } )
-->    (<s> ^bar ||)
}

--------------------------------------------------------------------------------

(source_file
  (production
    (prod_name)
    (condsForOneId
      (condType)
      (idTest
        (variable))
      (attrValueTests
        (string)
        (valueTest
          (conjunctiveTest
            (relationalTest
              (relation)
              (variable))
            (relationalTest
              (relation)
              (variable))
            (disjunctionTest
              (string)
              (string)
              (string)
              (string))
            (variable)))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (quoted))))))
