test/corpus/15-function.txt
================================================================================
arithmetic
================================================================================

sp {arithmatic
    (state <s>)
-->    (<s> ^foo (+ 1 5) (* 3 6) (/ 4 2) (- 3 1))
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (funcCall
            (funcName)
            (string)
            (string)))
        (valueMake
          (funcCall
            (funcName)
            (string)
            (string)))
        (valueMake
          (funcCall
            (funcName)
            (string)
            (string)))
        (valueMake
          (funcCall
            (funcName)
            (string)
            (string)))))))

================================================================================
clrf
================================================================================

sp {crlf
    (state <s>)
-->    (<s> ^foo (crlf))
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (crlf))))))

================================================================================
string function with args
================================================================================

sp {various-args
    (state <s>)
-->    (<s> ^foo (buy <book> bag |shelf from Ikea's|))
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (funcCall
            (funcName
              (string))
            (variable)
            (string)
            (quoted)))))))

================================================================================
function name looks like a variable but is interpreted as a string
================================================================================

sp {var-is-name
    (state <s>)
-->    (<s> ^foo (<name> <arg>))
}

--------------------------------------------------------------------------------

(source_file
  (production
    (beginning
      (prod_name))
    (cond
      (positiveCond
        (condsForOneId
          (condType)
          (idTest
            (test
              (simpleTest
                (singleTest
                  (variable))))))))
    (variableMutation
      (variable)
      (attrValueMake
        (string)
        (valueMake
          (funcCall
            (funcName
              (string))
            (variable)))))))

================================================================================
arguments are functions
================================================================================

sp {crlf
    (state <s>)
-->    (<s> ^foo (buy (groceryList <needs> <wants>) (askWife groceryList)))
}

--------------------------------------------------------------------------------
